alignment fix for skills

--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ hr {
   display: flex;
   justify-content: space-evenly;
   margin: 10px;
+  align-items: center;
 }
 .skill-container:hover,
 .project-container:hover {
